Update README
Added features and instructions